# serverless-otlp-forwarder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  samconfig.toml  template.yaml
benchmark/: .gitignore  Cargo.toml  Makefile  README.md  benchmark-config.yaml  samconfig.toml  template.yaml
benchmark/functions/config/: .gitignore  Makefile
benchmark/functions/nodejs/auto/: index.js  otel-config.js
benchmark/functions/nodejs/auto/aws/: index.js  package.json
benchmark/functions/nodejs/auto/basic/: index.js
benchmark/functions/nodejs/auto/http/: index.js
benchmark/functions/nodejs/auto/stream/: index.js
benchmark/functions/nodejs/manual/: index.js  package.json
benchmark/functions/nodejs/manual/aws/: index.js  package.json
benchmark/functions/nodejs/manual/basic/: index.js  package.json
benchmark/functions/nodejs/manual/http/: index.js  package.json
benchmark/functions/nodejs/manual/stream/: index.js  init.js  package.json
benchmark/functions/python/auto/: app.py
benchmark/functions/python/auto/aws/: main.py
benchmark/functions/python/auto/basic/: main.py
benchmark/functions/python/auto/http/: main.py
benchmark/functions/python/auto/stream/: main.py
benchmark/functions/python/manual/: app.py  requirements.txt
benchmark/functions/python/manual/aws/: main.py  requirements.txt
benchmark/functions/python/manual/basic/: main.py  requirements.txt
benchmark/functions/python/manual/http/: main.py  requirements.txt
benchmark/functions/python/manual/stream/: main.py  requirements.txt
benchmark/functions/rust/grpc/: Cargo.toml
benchmark/functions/rust/grpc/src/: main.rs
benchmark/functions/rust/http/: Cargo.toml
benchmark/functions/rust/http/src/: main.rs
benchmark/functions/rust/stdout/: Cargo.toml
benchmark/functions/rust/stdout/src/: main.rs
benchmark/proxy/: Cargo.toml
benchmark/proxy/src/: main.rs
benchmark/scripts/: generate_kinesis_data.py
benchmark/src/: benchmark.rs  chart.rs  jekyll.rs  lib.rs  main.rs  report.rs  telemetry.rs  types.rs
benchmark/src/templates/: chart.html  chart.jekyll.md  index.chart.md  index.html  index.jekyll.md
benchmark/test-events/: basic.json  http.json  stream.json
cli/livetrace/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
cli/livetrace/src/: aws_setup.rs  cli.rs  config.rs  console_display.rs  forwarder.rs  lib.rs  live_tail_adapter.rs  main.rs  poller.rs  processing.rs
cli/startled/: CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES.md
cli/startled/src/: benchmark.rs  console.rs  lambda.rs  lib.rs  main.rs  report.rs  screenshot.rs  stats.rs  telemetry.rs  types.rs  utils.rs
cli/startled/src/templates/: _sidebar.html  chart.html  index.html
cli/startled/src/templates/css/: style.css
cli/startled/src/templates/js/: lib.js
cli/startled/testbed/: Makefile  README.md  reports  samconfig.example.toml  template.yaml  testbed.md
cli/startled/testbed/functions/confmaps/: .gitignore  Makefile
cli/startled/testbed/functions/confmaps/adot/: collector.yaml
cli/startled/testbed/functions/confmaps/otel/: collector.yaml
cli/startled/testbed/functions/confmaps/rotel/: rotel.env
cli/startled/testbed/functions/nodejs/auto/: index.js  package.json
cli/startled/testbed/functions/nodejs/manual/: index.js  package.json
cli/startled/testbed/functions/python/auto/: main.py
cli/startled/testbed/functions/python/manual/: main.py  requirements.txt
cli/startled/testbed/functions/rust/collector/: Cargo.toml
cli/startled/testbed/proxy/: Cargo.toml
cli/startled/testbed/test-events/: basic.json
demo/hello/: Cargo.toml
demo/hello/src/: main.rs
demo/rust/: Cargo.toml
demo/rust/router/: Cargo.toml
demo/rust/router/router-core/: Cargo.toml
demo/rust/router/router-core/src/: lib.rs
demo/rust/router/router-macro/: Cargo.toml
demo/rust/router/router-macro/src/: lib.rs
demo/rust/router/src/: lib.rs
demo/rust/src/: backend.rs  frontend.rs  lib.rs  spanevent.rs
demo/rust/src/backend/: db.rs  main.rs
demo/rust/src/frontend/: main.rs  reqwest_propagation.rs
demo/rust/src/frontend/templates/: quotes.html
demo/rust/src/hello/: main.rs
demo/rust/src/simple/: main.rs
demo/rust/src/templates/: quotes.html
demo/rust/src/tower/: main.rs
experimental/aws-span-processor/processor/: Cargo.toml
experimental/aws-span-processor/processor/src/: main.rs  otlp.rs
experimental/otlp-stdout-kinesis-processor/extension/layer/: Cargo.toml  Makefile
experimental/otlp-stdout-kinesis-processor/extension/layer/src/: main.rs
experimental/otlp-stdout-kinesis-processor/processor/: Cargo.toml
experimental/otlp-stdout-kinesis-processor/processor/src/: main.rs
forwarder/: Cargo.toml
forwarder/src/: collectors.rs  headers.rs  main.rs  sigv4.rs
forwarders/experimental/aws-span-processor/processor/: Cargo.toml
forwarders/experimental/aws-span-processor/processor/src/: main.rs  otlp.rs
forwarders/experimental/otlp-stdout-kinesis-processor/extension/layer/: Cargo.toml  Makefile
forwarders/experimental/otlp-stdout-kinesis-processor/extension/layer/src/: aggregation.rs  config.rs  events.rs  kinesis.rs  main.rs  otlp_parsing.rs  pipe_reader.rs  types.rs  xray.rs
forwarders/experimental/otlp-stdout-kinesis-processor/processor/: Cargo.toml
forwarders/experimental/otlp-stdout-kinesis-processor/processor/src/: main.rs
forwarders/otlp-stdout-logs-processor/processor/: CHANGELOG.md  Cargo.toml
forwarders/otlp-stdout-logs-processor/processor/src/: app_state.rs  collectors.rs  headers.rs  lib.rs  log_processor.rs  main.rs  processing.rs  span_compactor.rs  telemetry.rs  wrappers.rs
my-python-function/: index.py  pyproject.toml
otlp-stdout-client/rust/client/: CHANGELOG.md  Cargo.toml  README.md
otlp-stdout-client/rust/client/src/: lambda_detector.rs  lib.rs
processors/forwarder/: Cargo.toml
processors/forwarder/src/: app_state.rs  collectors.rs  headers.rs  lib.rs  log_processor.rs  otlp.rs  processing.rs  span_compactor.rs  span_processor.rs  telemetry.rs  wrappers.rs
processors/forwarder/src/processing/: tests.rs
(+92 files in other folders)
