[workspace]
members = [
    "packages/rust/otlp-stdout-client",
    "packages/rust/otlp-sigv4-client",
    "packages/rust/lambda-otel-utils",
    "packages/rust/lambda-lw-http-router",
    "packages/rust/lambda-lw-http-router/router-core",
    "packages/rust/lambda-lw-http-router/router-macro",
    "processors/forwarder",
    "demo/rust",
    "demo/hello",
    "benchmark"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Bologna <alessandro.bologna@gmail.com>"]
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
# Local packages
otlp-stdout-client = { path = "packages/rust/otlp-stdout-client", version = "0.2.2" }
otlp-sigv4-client = { path = "packages/rust/otlp-sigv4-client", version = "0.1.0" }
lambda-otel-utils = { path = "packages/rust/lambda-otel-utils", version = "0.2.2" }
lambda-lw-http-router = { path = "packages/rust/lambda-lw-http-router" }
lambda-lw-http-router-core = { path = "packages/rust/lambda-lw-http-router/router-core" }
lambda-lw-http-router-macro = { path = "packages/rust/lambda-lw-http-router/router-macro" }

# Runtime and async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.82"
futures = "0.3.31"

# OpenTelemetry and tracing
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry-http = { version = "0.27.0" }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["http-proto", "http-json", "reqwest-client"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.28.0"

# AWS related
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = { version = "1.7.3", features = ["http-1x"] }
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw", "alb"] }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }

# HTTP and networking
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1.0"

# Serialization and utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
anyhow = "1.0.94"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"