[workspace]
members = [
    "packages/rust/*",
    "forwarders/otlp-stdout-logs-processor/processor",
    "forwarders/experimental/aws-span-processor/processor",
    "forwarders/experimental/otlp-stdout-kinesis-processor/processor",
    "forwarders/experimental/otlp-stdout-kinesis-processor/extension/layer",
    "demo/rust",
    "benchmark",
    "benchmark/proxy", 
    "packages/rust/lambda-otel-lite/examples"
]

resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Alessandro Bologna <alessandro.bologna@gmail.com>"]
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# Local packages
otlp-stdout-client = { path = "packages/rust/otlp-stdout-client" }
otlp-sigv4-client = { path = "packages/rust/otlp-sigv4-client" }
lambda-otel-utils = { path = "packages/rust/lambda-otel-utils" }
lambda-lw-http-router = { path = "packages/rust/lambda-lw-http-router" }
lambda-lw-http-router-core = { path = "packages/rust/lambda-lw-http-router/router-core" }
lambda-lw-http-router-macro = { path = "packages/rust/lambda-lw-http-router/router-macro" }
otlp-stdout-span-exporter = { path = "packages/rust/otlp-stdout-span-exporter" }
lambda-otel-lite = { path = "packages/rust/lambda-otel-lite" }
# Runtime and async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.82"
futures = "0.3.31"

# OpenTelemetry and tracing
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-http = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["http-proto", "http-json", "reqwest-client"] }
opentelemetry-proto = { version = "0.28.0", features = ["gen-tonic", "trace"] }
opentelemetry-aws = { version = "0.16.0", features = ["detector-aws-lambda"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.29.0"

# AWS related
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = { version = "1.7.3", features = ["http-1x"] }
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["apigw", "alb", "sqs"] }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }
aws-credential-types = "1.1.4"
aws-sdk-secretsmanager = { version = "1.48.0", features = ["behavior-version-latest"] }

# HTTP and networking
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1.0"

# Serialization and utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
anyhow = "1.0.94"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
