[package]
name = "otel-benchmark-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool for benchmarking OpenTelemetry Lambda implementations"

[dependencies]
aws-config.workspace = true
aws-sdk-lambda = "1.59.0"
tokio.workspace = true
clap = { version = "4.4.8", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
base64 = "0.22.1" 
futures.workspace = true
indicatif = { version = "0.17", features = ["improved_unicode"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19.1"
headless_chrome = "1.0.9"
