[package]
name = "otel-benchmark-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool for benchmarking OpenTelemetry Lambda implementations"

[features]
default = ["screenshots"]
screenshots = ["headless_chrome"]

[dependencies]
aws-config.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-http.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
aws-credential-types = "1.1.4"
otlp-sigv4-client.workspace = true
reqwest.workspace = true
http = "1.3.1"
clap = { version = "4.4.8", features = ["derive"] }
aws-sdk-lambda = "1.59.0"
base64 = "0.22.1" 
indicatif = { version = "0.17", features = ["improved_unicode"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19.1"
headless_chrome = { version = "1.0.9", optional = true }
aws-sdk-cloudformation = "1.26.0"
opentelemetry-aws.workspace = true
statrs = "0.18.0"
