[package]
name = "lambda-otlp-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0"
base64 = "0.22.1"
flate2 = "1.0"
anyhow = "1.0.88"
tracing = { version = "0.1", features = ["log"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
serde = { version = "1.0", features = ["derive"] }
aws-sdk-secretsmanager = "1.48.0"
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }
otlp-stdout-client = { path = "../packages/rust/otlp-stdout-client" }
lambda-otel-utils = { path = "../packages/rust/lambda-otel-utils" }
futures = "0.3.31"
tracing-opentelemetry = "0.27.0"
opentelemetry = "0.26.0"
lazy_static = "1.5.0"
