[package]
name = "lambda-otlp-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0"
base64 = "0.22.1"
flate2 = "1.0"
anyhow = "1.0.88"
futures = "0.3.31"
tracing-opentelemetry = "0.28.0"
opentelemetry = "0.27.0"
lazy_static = "1.5.0"
url = "2.5.3"
tracing = { version = "0.1", features = ["log"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-sigv4 = "1.1.4"
aws-credential-types = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
aws-sdk-secretsmanager = { version = "1.48.0", features = ["behavior-version-latest"] }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }
otlp-stdout-client = { version = "0.2.1", path = "../packages/rust/otlp-stdout-client" }
lambda-otel-utils = { version = "0.2.0", path = "../packages/rust/lambda-otel-utils" }
aws-smithy-runtime-api = { version = "1.7.3", features = ["http-1x"] }
