[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lambda-otel-lite>=0.13.0",
    "opentelemetry-api>=1.28.2",
    "opentelemetry-exporter-otlp-proto-http>=1.28.2",
    "opentelemetry-instrumentation-requests>=0.49b2",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-semantic-conventions>=0.49b2",
    "otlp-stdout-adapter>=0.1.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
