[package]
name = "startled"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool for benchmarking Lambda functions"
repository = "https://github.com/dev7a/serverless-otlp-forwarder/tree/main/cli/startled"
documentation = "https://docs.rs/startled"
readme = "README.md"
keywords = ["lambda", "cli", "benchmark", "performance", "serverless"]
categories = ["command-line-utilities", "development-tools::profiling"]
exclude = ["testbed/"]

[features]
default = ["screenshots"]
screenshots = ["headless_chrome"]

[dependencies]
aws-config.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-http.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
aws-credential-types = { workspace = true }
otlp-sigv4-client = { version = "0.11.0" }
reqwest.workspace = true
clap = { workspace = true, features = ["derive"] }
aws-sdk-lambda = { workspace = true }
base64 = { workspace = true } 
indicatif = { workspace = true, features = ["improved_unicode"] }
chrono = { workspace = true, features = ["serde"] }
tera = { workspace = true }
headless_chrome = { workspace = true, optional = true }
aws-sdk-cloudformation = { workspace = true }
opentelemetry-aws.workspace = true
statrs = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true, features = ["tty", "custom_styling"] }
regex.workspace = true
rust_decimal = { workspace = true, features = ["serde-with-arbitrary-precision"] }
pulldown-cmark.workspace = true

[dev-dependencies]
tempfile = "3.10.1"
