[package]
name = "hello"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lambda-lw-http-router.workspace = true
lambda-otel-utils.workspace = true
aws_lambda_events.workspace = true
tokio.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true

