[package]
name = "demo-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0"
opentelemetry = { version = "0.27.0", features = ["trace"] }
tracing-opentelemetry = "0.28.0"
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }
tracing = { version = "0.1" }
anyhow = "1.0.88"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.43.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
lazy_static = "1.5.0"
sha2 = "0.10.8"
tera = "1.20.0"
lambda-otel-utils = { path = "../../packages/rust/lambda-otel-utils" }
lambda-lw-http-router = { path = "../../packages/rust/lambda-lw-http-router" }
reqwest-middleware = "0.4.0"
reqwest-tracing = { version = "0.5.4" }
serde = "1.0.215"
opentelemetry-http = "0.27.0"
http = "1"
async-trait = "0.1.83"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
