[package]
name = "demo-lambda"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
lambda_runtime.workspace = true
tracing.workspace = true
anyhow.workspace = true
reqwest.workspace = true
aws_lambda_events.workspace = true
aws-config.workspace = true
lambda-otel-utils.workspace = true
lambda-lw-http-router.workspace = true
serde.workspace = true
opentelemetry-http.workspace = true
http.workspace = true
async-trait.workspace = true
# otlp-stdout-span-exporter.workspace = true
lambda-otel-lite.workspace = true
aws-sdk-dynamodb = "1.43.0"
chrono = { version = "0.4", features = ["serde"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
lazy_static = "1.5.0"
sha2 = "0.10.8"
tera = "1.20.0"
reqwest-middleware = "0.4.0"
reqwest-tracing = { version = "0.5.4" }

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "hello"
path = "src/hello/main.rs"

[[bin]]
name = "simple"
path = "src/simple/main.rs"

[[bin]]
name = "tower"
path = "src/tower/main.rs"
