[package]
name = "demo-lambda"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
# tracing-opentelemetry.workspace = true
tracing-opentelemetry = { git = "https://github.com/dev7a/tracing-opentelemetry", rev = "55880e7de9e4b9098cf83d461af59070f0287869" }
lambda_runtime.workspace = true
tracing.workspace = true
anyhow.workspace = true
reqwest.workspace = true
aws_lambda_events.workspace = true
aws-config.workspace = true
lambda-lw-http-router.workspace = true
serde.workspace = true
lambda-otel-lite.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
serde_dynamo.workspace = true
sha2.workspace = true
tera.workspace = true
reqwest-middleware.workspace = true
reqwest-tracing.workspace = true
thiserror.workspace = true
rand = { workspace = true }

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/backend/main.rs"
