[package]
name = "lambda-otlp-forwarder"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "log_processor"
path = "src/log_processor.rs"

[dependencies]
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
reqwest.workspace = true
aws-config.workspace = true
serde.workspace = true
lambda_runtime.workspace = true
otlp-stdout-client.workspace = true
otlp-sigv4-client.workspace = true
lambda-otel-utils.workspace = true
aws-sdk-secretsmanager = { version = "1.48.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.4"
url = "2.5.3"
base64 = "0.22.1"
flate2 = "1.0"
aws_lambda_events = { version = "0.16.0", features = ["cloudwatch_logs", "kinesis"], default-features = false }
regex = "1.11.1"

[dev-dependencies]
wiremock = "0.6"
mockito = "1.2"
chrono = "0.4.39"
tokio = { version = "1.0", features = ["full"] }
