[package]
name = "aws-span-processor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lambda-otlp-forwarder = { path = "../../../processors/forwarder" }
tokio.workspace = true
anyhow.workspace = true
aws_lambda_events = { workspace = true, features = ["cloudwatch_logs"] }
lambda_runtime.workspace = true
aws-sdk-secretsmanager.workspace = true
reqwest.workspace = true
tracing.workspace = true
lambda-otel-lite.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
otlp-sigv4-client.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
serde.workspace = true
serde_json.workspace = true
opentelemetry-proto = "0.28.0"
prost = "0.13.5" 