[package]
name = "otlp-stdout-kinesis-processor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lambda-otlp-forwarder = { path = "../../../processors/forwarder" }
tokio.workspace = true
anyhow.workspace = true
aws_lambda_events = { workspace = true, features = ["kinesis"] }
lambda_runtime.workspace = true
aws-sdk-secretsmanager.workspace = true
reqwest.workspace = true
tracing.workspace = true
lambda-otel-utils.workspace = true
otlp-sigv4-client.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono = "0.4" 
