[package]
name = "otlp-stdout-client"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Bologna <alessandro.bologna@gmail.com>"]
description = "A custom HTTP client for OpenTelemetry OTLP exporters in serverless environments, writing to stdout for easy integration with AWS Lambda and forwarding to collectors"
license = "Apache-2.0"
repository = "https://github.com/dev7a/lambda-otlp-forwarder/tree/main/otlp-stdout-client/rust/client"
readme = "README.md"
keywords = ["opentelemetry", "otlp", "stdout", "serverless", "lambda"]
categories = ["development-tools::debugging", "web-programming"]

[features]
default = ["trace", "metrics"]
trace = []
metrics = ["opentelemetry/metrics", "opentelemetry-otlp/metrics"]

[dependencies]
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
opentelemetry = { version = "0.25.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.25.0", features = ["http-proto", "reqwest-client", "http-json"] }
opentelemetry-semantic-conventions = "0.25.0"
async-trait = "0.1.82"
http = "1.1.0"
bytes = "1.7.2"
opentelemetry-http = "0.25.0"
base64 = "0.22.1"
flate2 = "1.0"
# opentelemetry-aws = { version = "0.13.0", features = ["detector-aws-lambda"] } # TODO: uncomment this when the library is published

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
sealed_test = "1.1.0"   
