[package]
name = "benchmark-functions-rust-stdout"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
tracing.workspace = true
lambda-otel-lite.workspace = true
tracing-opentelemetry.workspace = true
[[bin]]
name = "basic-rust-stdout"
path = "src/main.rs"
