[package]
name = "lambda-lw-router-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
darling = "0.20"
serde_json = "1.0"
lambda_runtime = "0.13.0"
lambda-lw-router-core = { path = "../router-core" }
