[package]
name = "aws-span-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serverless-otlp-forwarder.workspace = true
tokio.workspace = true
anyhow.workspace = true
lambda_runtime.workspace = true
reqwest.workspace = true
tracing.workspace = true
lambda-otel-lite.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
otlp-sigv4-client.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
serde_json.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
aws_lambda_events = { workspace = true, features = ["cloudwatch_logs"] }

[[bin]]
name = "span_processor"
path = "src/main.rs"
